# MQTT

./: README.md
AirSENCE/: Cargo.toml
AirSENCE/data_logic/: decoder.rs  encoder.rs
AirSENCE/src/: custom_errors.rs  lib.rs  main.rs
Client/: Cargo.toml
Client/src/: main.rs
